[package]
name = "git-changelog"
version = "1.0.0"
edition = "2021"
authors = [ "fboulnois <fboulnois@users.noreply.github.com>" ]
description = "Create a changelog from semantic git commits"
keywords = [ "git", "changelog" ]
readme = "README.md"
license = "MPL-2.0"

[dependencies]
regex = "1"
once_cell = "1"
